Update callbackURL for local testing and revert for deployment
